// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should render component with custom props 1`] = `
<DocumentFragment>
  .c0 {
  margin-right: 15px;
  margin-left: 15px;
  max-width: 100%;
}

.c1 {
  box-sizing: border-box;
}

@media (min-width:576px) {
  .c0 {
    max-width: 540px;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 720px;
  }
}

@media (min-width:992px) {
  .c0 {
    max-width: 960px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1140px;
  }
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`<Container /> should render component with default props 1`] = `
<DocumentFragment>
  .c0 {
  margin-right: auto;
  margin-left: auto;
  max-width: 100%;
}

.c1 {
  box-sizing: border-box;
}

@media (min-width:576px) {
  .c0 {
    max-width: 540px;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 720px;
  }
}

@media (min-width:992px) {
  .c0 {
    max-width: 960px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1140px;
  }
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;
